[package]
name = "rabbit-hole"
version = "2.0.3"
description = "Rabbit Hole"
authors = ["Moeefa"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.5.0"
tauri-plugin-os = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
muda = "0.13.0"
tauri-plugin-http = { version = "2.0.0-beta", features = ["unsafe-headers"] }
tauri-plugin-store = "2.0.0-beta.4"
tauri-plugin-dialog = "2.0.0-beta.3"
tauri-plugin-process = "2.0.0-beta.3"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-beta.3"
