[package]
name = "rabbit-hole"
version = "2.0.3"
description = "Rabbit Hole"
authors = ["Moeefa"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-os = "2.0.0-beta"
tauri-plugin-http = { version = "2.0.0-beta", features = ["unsafe-headers"] }
tauri-plugin-store = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-process = "2.0.0-beta"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
discord-rich-presence = { git = "https://github.com/vionya/discord-rich-presence", branch = "main" }
lazy_static = "1.5.0"
